@@ -224,6 +224,7 @@ Version 1.5
  - Add Popp 700045 Universal Keypad (Nechry)
  - Add Fibaro FGWPG111 Wall Plug (Nechry)
  - Add Everspring SP815 Pet Immune Pir Motion Detector (Nechry)
+ - Add philio/Zipato pad02 Smart Dimmer E27 (Nechry)
 
 
 Version 1.4
